# smart-surveillance-system

./: .gitignore  README.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  surveillance.cpp
docs/: SETUP.md
python/: surveillance.py
